gates/fixtures/negative/no-expo-token-leak/secrets.env.production
# dotenv variant plant, quoted form (WO-4.0d rider)
"EXPO_TOKEN": "dotenvProdLeak654321"
